--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -116,10 +116,31 @@
                             {% endif %}
                             <div class="col-12">
                                 <p>Quantity:</p>
+                                <!--Quantity buttons and relating JavaScript used from Boutique Ado-->
                                 <div class="form-group w-50">
                                     <div class="input-group">
-                                        <input type="number" name="quantity" value="1" max="99" data_item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                        <div class="input-group-prepend">
+                                            <button class="decrement-qty btn btn-outline-black rounded-0" 
+                                                data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                                <span class="icon">
+                                                    <i class="fas fa-minus"></i>
+                                                </span>
+                                            </button>
+                                        </div>
+                                        <input class="form-control qty_input" type="number"
+                                            name="quantity" value="1" min="1" max="99"
+                                            data-item_id="{{ product.id }}"
+                                            id="id_qty_{{ product.id }}">
+                                        <div class="input-group-append">
+                                            <button class="increment-qty btn btn-outline-black rounded-0"
+                                                data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                                <span class="icon">
+                                                    <i class="fas fa-plus"></i>
+                                                </span>
+                                            </button>
+                                        </div>
                                     </div>
+                                </div>
                                 </div>
                             </div>
                             <div class="col-12">
@@ -141,4 +162,9 @@
     </div>
 
 </div>
+{% endblock %}
+
+{% block postloadjs %}
+{{ block.super }}
+{% include 'products/includes/quantity_input_script.html' %}
 {% endblock %}
