--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -2,129 +2,118 @@
 {% load static %}
 
 {% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col">
+<div class="container header-container">
+    <div class="row">
+        <div class="col">
 
-            </div>
         </div>
     </div>
+</div>
 {% endblock %}
 
 {% block content %}
-    <div class="container">
-      <div class="row">
-          <div class="col">
-              <h2>Shopping Basket</h2>
-          </div>
-      </div>
-      <div class="row">
-          <div class="col">
-              {% if basket_items %}
-                <div class="table-responsive mx-auto">
-                    <table class="table table-sm">
-                        <thead>
-                            <tr>
-                                <th scope="col">Product Info</th>
-                                <th scope="col"></th>
-                                <th scope="col">Price</th>
-                                <th scope="col">Qty</th>
-                                <th scope="col">Subtotal</th>
-                            </tr>
-                        </thead>
+<div class="container">
+    <div class="row">
+        <div class="col mt-2">
+            <h2>Shopping Basket ({{ product_count }})</h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-12 col-md-8">
+            {% if basket_items %}
 
-                        {% for item in basket_items %}
-                            <tr>
-                                <td class="p-2 w-25">
-                                    {% if item.product.image %}
-                                    <img class="img-fluid" src="{{ item.product.image.url }}" alt="{{ item.product.name }}">
-                                    {% else %}
-                                    <img src="{{ MEDIA_URL }}noimage.png" alt="{{ item.product.name }}">
+                {% for item in basket_items %}
+                <div class="row basket-item">
+                    <div class="col-4 col-lg-2">
+                        {% if item.product.image %}
+                            <img class="img-fluid" src="{{ item.product.image.url }}" alt="{{ item.product.name }}">
+                        {% else %}
+                            <img src="{{ MEDIA_URL }}noimage.png" alt="{{ item.product.name }}">
+                        {% endif %}
+                    </div>
+                    <div class="col-8 col-lg-10">
+                        <div class="row">
+                            <div class="col-md-12 col-lg-7">
+                                <h3 id="basket-item-title">{{ item.product.name }}</h3>
+                                <h4 class="basket-meta">Size:{% if item.product.men_sizes %}
+                                    {{ item.size|upper }}
+                                    {% elif item.product.ladies_sizes or item.product.kids_sizes or item.product.shoe_sizes %}
+                                    {{ item.size }}
                                     {% endif %}
-                                </td>
-                                <td class="py-2">
-                                    <p>{{ item.product.name }}</p>
-                                    <p>Size:{% if item.product.men_sizes %}
-                                                {{ item.size|upper }}
-                                            {% elif item.product.ladies_sizes or item.product.kids_sizes or item.product.shoe_sizes %}
-                                                {{ item.size }}
-                                            {% endif %}
-                                    </p>
-                                    <p>SKU: {{ item.product.sku|upper }}</p>
-                                </td>
-                                <td class="py-2">
-                                    <p>{{ item.product.price }}</p>
-                                </td>
-                                <td class="py-2">
-                                    <form class="form" action="" method="POST">
-                                        {% csrf_token %}
-                                        <div class="form-group">
-                                            <div class="input-group">
-                                                <div class="input-group-prepend">
-                                                    <button class="decrement-qty btn btn-sm btn-outline-black rounded-0" 
-                                                        data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id  }}">
-                                                        <span>
-                                                            <i class="fas fa-minus fa-sm"></i>
-                                                        </span>
-                                                    </button>
-                                                </div>
-                                                <input class="form-control form-control-sm qty_input" type="number"
-                                                    name="quantity" value="{{ item.quantity }}" min="1" max="99"
-                                                    data-item_id="{{ item.item_id  }}"
-                                                    id="id_qty_{{ item.item_id }}">
-                                                <div class="input-group-append">
-                                                    <button class="increment-qty btn btn-sm btn-outline-black rounded-0"
-                                                        data-item_id="{{ item.item_id  }}" id="increment-qty_{{ item.item_id  }}">
-                                                        <span>
-                                                            <i class="fas fa-plus fa-sm"></i>
-                                                        </span>
-                                                    </button>
-                                                </div>
+                                </h4>
+                                <h4 class="basket-meta">SKU: {{ item.product.sku|upper }}</h4>
+                            </div>
+                            <div class="col-md-6 col-lg-3">
+                                <form class="form" action="" method="POST">
+                                    {% csrf_token %}
+                                    <div class="form-group">
+                                        <div class="input-group">
+                                            <div class="input-group-prepend">
+                                                <button class="decrement-qty btn btn-sm btn-outline-black rounded-0"
+                                                    data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id  }}">
+                                                    <span>
+                                                        <i class="fas fa-minus fa-sm"></i>
+                                                    </span>
+                                                </button>
+                                            </div>
+                                            <input class="form-control form-control-sm qty_input" type="number" name="quantity"
+                                                value="{{ item.quantity }}" min="1" max="99" data-item_id="{{ item.item_id  }}"
+                                                id="id_qty_{{ item.item_id }}">
+                                            <div class="input-group-append">
+                                                <button class="increment-qty btn btn-sm btn-outline-black rounded-0"
+                                                    data-item_id="{{ item.item_id  }}" id="increment-qty_{{ item.item_id  }}">
+                                                    <span>
+                                                        <i class="fas fa-plus fa-sm"></i>
+                                                    </span>
+                                                </button>
                                             </div>
                                         </div>
-                                    </form>
-                                    <a class="update-link text-info"><small>Update</small></a>
-                                    <a class="remove-item text-danger float-right" id="remove_{{item.item_id }}" data-size="{{ item.size }}"><small>Remove</small></a>
-                                </td>
-                                <td class="py-2">
-                                    <p>{{ item.product.price }}</p>
-                                </td>
-                            </tr>
-                        {% endfor %}
-                        <tr>
-                            <td>
-                                <h6>Basket Total: £{{ total|floatformat:2 }}</h6>
-                                <h6>Delivery: £{{ delivery|floatformat:2 }}</h6>
-                                <h4>Grand Total: £{{ grand_total|floatformat:2 }}</h4>
-                                {% if free_delivery_delta > 0 %}
-                                    <p>
-                                        Get free delivery if you spend <strong>£{{ free_delivery_delta }}</strong> more!
-                                    </p>
-                                {% endif %}
-                            </td>
-                        </tr>
-                        <tr>
-                            <td colspan="5">
-                                <a href="{% url 'products' %}" class="btn btn-outline-black btn-lg">
-                                    <span>
-                                        <i class="fas fa-chevron-left"></i>
-                                    </span>
-                                    <span>Keep Shopping</span>
-                                </a>
-                                <input type="submit" class="btn btn-blue btn-lg" value="Add to basket">
-                            </td>
-                        </tr>
-                    </table>
+                                    </div>
+                                </form>
+                                <a class="update-link text-info"><small>Update</small></a>
+                                <a class="remove-item text-danger float-right" id="remove_{{item.item_id }}"
+                                    data-size="{{ item.size }}"><small>Remove</small></a>
+                            </div>
+                            <div class="col-md-6 col-lg-2">
+                                <h4>£{{ item.product.price }}</h4>
+                            </div>
+                        </div>
+                     
+                        
+                    </div>
                 </div>
-              {% else %}
-                <p>Your basket is empty.</p>
-                <a href="{% url 'products' %}">
-                    <span>Keep Shopping</span>
-                </a>
-              {% endif %}
-          </div>
-      </div>
+                {% endfor %}
+            {% else %}
+                        <div>
+                            <p>Your basket is empty</p>
+
+                        </div>
+            {% endif %}
+        </div>
+        <div class="col-sm-12 col-md-4">
+            <h6>Basket Total: £{{ total|floatformat:2 }}</h6>
+            <h6>Delivery: £{{ delivery|floatformat:2 }}</h6>
+            <h4>Grand Total: £{{ grand_total|floatformat:2 }}</h4>
+            {% if free_delivery_delta > 0 %}
+                <p>
+                    Get free delivery if you spend <strong>£{{ free_delivery_delta }}</strong> more!
+                </p>
+            {% endif %}
+    
+            <a href="{% url 'products' %}" class="btn btn-outline-black btn-lg">
+                <span>
+                    <i class="fas fa-chevron-left"></i>
+                </span>
+                <span>Keep Shopping</span>
+            </a>
+            <input type="submit" class="btn btn-blue btn-lg" value="Add to basket">
+    
+        </div>
     </div>
+
+  
+</div>
+
 {% endblock %}
 
 {% block postloadjs %}
@@ -134,23 +123,26 @@
 <!-- Used from Boutique Ado -->
 <script type="text/javascript">
     // Update quantity on click
-    $('.update-link').click(function(e) {
+    $('.update-link').click(function (e) {
         var form = $(this).prev('.update-form');
         form.submit();
     })
 
     // Remove item and reload on click
-    $('.remove-item').click(function(e) {
+    $('.remove-item').click(function (e) {
         var csrfToken = "{{ csrf_token }}";
         var itemId = $(this).attr('id').split('remove_')[1];
         var size = $(this).data('size');
         var url = `/bag/remove/${itemId}`;
-        var data = {'csrfmiddlewaretoken': csrfToken, 'size': size};
+        var data = {
+            'csrfmiddlewaretoken': csrfToken,
+            'size': size
+        };
 
         $.post(url, data)
-         .done(function() {
-             location.reload();
-         });
+            .done(function () {
+                location.reload();
+            });
     })
 </script>
 {% endblock %}
