--- a/static/css/base.css
+++ b/static/css/base.css
@@ -167,7 +167,20 @@ a.category-badge > span.badge:hover {
     font-size: 100%;
 }
 
+/* Basket */
 
+.basket-item {
+    padding: 20px 0;
+}
+
+#basket-item-title {
+    font-size: 1.4rem;
+}
+
+.basket-meta {
+    font-size: 1.2rem;
+    color: #666;
+}
   
 
 /* Media Queries */
