--- a/static/css/base.css
+++ b/static/css/base.css
@@ -212,7 +212,13 @@ a.category-badge > span.badge:hover {
 .remove-item i:hover {
     color: #feb751;
 }
-  
+
+.message-container {
+    position: fixed;
+    top: 72px;
+    right: 15px;
+    z-index: 9999999999;
+}
 
 /* Media Queries */
 @media (max-width: 425px) {
