--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -16,58 +16,59 @@
     <div class="container-fluid">
         <div class="row mt-2">
 
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-7 col-lg-6 offset-lg-1">
                 <div>
                     {% if product.image %}
-                        <a href="{{ product.image.url }}" target="_blank">
-                            <img src="{{ product.image.url }}" class="img-fluid" alt="{{ product.name }}">
-                        </a>
+                    <a href="{{ product.image.url }}" target="_blank">
+                        <img src="{{ product.image.url }}" class="img-fluid" alt="{{ product.name }}">
+                    </a>
                     {% else %}
-                        <a href="">
-                            <img src="{{ MEDIA_URL }}noimage.png" class="img-fluid" alt="{{ product.name }}">
-                        </a>
+                    <a href="">
+                        <img src="{{ MEDIA_URL }}noimage.png" class="img-fluid" alt="{{ product.name }}">
+                    </a>
                     {% endif %}
                 </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-4">
+            <div class="col-12 col-md-5 col-lg-4">
                 <h3 class="mt-2">{{ product.name }}</h3>
                 <p class="basket-meta">{{ product.category.friendly_name }}</p>
                 <p>£{{ product.price }}</p>
                 {% if request.user.is_superuser %}
-                    <small>
-                        <a href="{% url 'edit_product' product.id %}">Edit</a>
-                        <a href="#deleteProduct" class="text-danger" data-bs-toggle="modal"
+                <small>
+                    <a href="{% url 'edit_product' product.id %}">Edit</a>
+                    <a href="#deleteProduct" class="text-danger" data-bs-toggle="modal"
                         data-bs-target="#deleteProduct">Delete</a>
-                    </small>
-                    <!-- Deletion confirmation Bootstrap modal -->
-                    <div class="modal fade" id="deleteProduct" tabindex="-1" aria-labelledby="Delete product confirmation modal"
-                        aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                        aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                    <p class="text-center">Are you sure you want to delete {{ product.name }}?</p>
-                                  </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-sm btn-grey" data-bs-dismiss="modal">Cancel</button>
-                                    <a href="{% url 'delete_product' product.id %}" class="text-danger">
-                                        <button type="button" class="btn btn-sm btn-danger">Delete</button>
-                                    </a>
-                                </div>
+                </small>
+                <!-- Deletion confirmation Bootstrap modal -->
+                <div class="modal fade" id="deleteProduct" tabindex="-1"
+                    aria-labelledby="Delete product confirmation modal" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <p class="text-center">Are you sure you want to delete {{ product.name }}?</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-sm btn-grey"
+                                    data-bs-dismiss="modal">Cancel</button>
+                                <a href="{% url 'delete_product' product.id %}" class="text-danger">
+                                    <button type="button" class="btn btn-sm btn-danger">Delete</button>
+                                </a>
                             </div>
                         </div>
                     </div>
+                </div>
                 {% endif %}
                 <form action="{% url 'add_to_basket' product.id %}" method="POST">
                     {% csrf_token %}
-                    <div class="form-row mt-4">
+                    <div class="row form-row mt-4">
                         {% if product.men_sizes %}
-                        <div class="col-sm-12 col-md-6">
-                            <p>Size:</p>
-                            <select class="form-control form-select rounded-0" name="product_size" id='id_product_size'>
+                        <div class="col-sm-12 col-md-7">
+                            <p class="small">Size*</p>
+                            <select class="form-control form-select" name="product_size" id='id_product_size'>
                                 <option value="" selected>Choose size</option>
                                 <option value="xs">XS</option>
                                 <option value="s">S</option>
@@ -78,7 +79,7 @@
                         </div>
                         {% elif product.ladies_sizes %}
                         <div class="col-sm-12 col-md-6">
-                            <p>Size:</p>
+                            <p>Size*</p>
                             <select class="form-control form-select rounded-0" name="product_size" id='id_ladies_size'>
                                 <option value="" selected>Choose size</option>
                                 <option value="6">6</option>
@@ -136,103 +137,109 @@
                         {% else %}
                         N/A
                         {% endif %}
-                        <div class="col-sm-12 col-md-6 mt-4">
-                            <p>Quantity:</p>
-                            <!--Quantity buttons and relating JavaScript used from Boutique Ado-->
+                        <div class="col-sm-12 col-md-5">
+                            <p class="small">Quantity*</p>
+                            {% csrf_token %}
                             <div class="form-group">
                                 <div class="input-group">
-                                    <div class="input-group-prepend">
-                                        <button class="decrement-qty btn btn-outline-black rounded-0"
-                                            data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
-                                            <span>
-                                                <i class="fas fa-minus"></i>
-                                            </span>
-                                        </button>
-                                    </div>
-                                    <input class="form-control qty_input" type="number" name="quantity" value="1"
-                                        min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
-                                    <div class="input-group-append">
-                                        <button class="increment-qty btn btn-outline-black rounded-0"
-                                            data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
-                                            <span>
-                                                <i class="fas fa-plus"></i>
-                                            </span>
-                                        </button>
-                                    </div>
-                                    {% if item.product.mens_sizes or item.product.ladies_sizes or item.product.shoe_sizes or item.product.kids_sizes or item.product.kids_shoe_sizes%}
-                                    <input type="hidden" name="product_size" value="{{ item.size }}">
-                                    {% endif %}
+                                    <!-- Quantity selector -->
+                                    <select class="form-control form-select mx-auto" name="quantity"
+                                        value="{{ item.quantity }}" data-product_id="{{ item.product.id }}"
+                                        id="id_qty_{{ item.product.id }}">
+                                        <option value="1" {% if item.quantity == 1 %}selected{% endif %}>1
+                                        </option>
+                                        <option value="2" {% if item.quantity == 2 %}selected{% endif %}>2
+                                        </option>
+                                        <option value="3" {% if item.quantity == 3 %}selected{% endif %}>3
+                                        </option>
+                                        <option value="4" {% if item.quantity == 4 %}selected{% endif %}>4
+                                        </option>
+                                        <option value="5" {% if item.quantity == 5 %}selected{% endif %}>5
+                                        </option>
+                                        <option value="6" {% if item.quantity == 6 %}selected{% endif %}>6
+                                        </option>
+                                        <option value="7" {% if item.quantity == 7 %}selected{% endif %}>7
+                                        </option>
+                                        <option value="8" {% if item.quantity == 8 %}selected{% endif %}>8
+                                        </option>
+                                        <option value="9" {% if item.quantity == 9 %}selected{% endif %}>9
+                                        </option>
+                                        <option value="10" {% if item.quantity == 10 %}selected{% endif %}>10
+                                        </option>
+                                    </select>
                                 </div>
                             </div>
+                            {% if item.product.mens_sizes or item.product.ladies_sizes or item.product.shoe_sizes or item.product.kids_sizes or item.product.kids_shoe_sizes%}
+                            <input type="hidden" name="product_size" value="{{ item.size }}">
+                            {% endif %}
                         </div>
                         <div class="col-12 mt-4">
-                            <input type="submit" class="btn btn-blue basket-buttons" value="Add to basket">
+                            <input type="submit" class="btn btn-sm btn-blue basket-buttons" value="Add to basket">
 
-                            <a href="{% url 'products' %}" class="btn btn-grey basket-buttons">
+                            <a href="{% url 'products' %}" class="btn btn-sm btn-grey basket-buttons">
                                 <span>Continue shopping</span>
                             </a>
-
                         </div>
                         <input type="hidden" name="redirect_url" value="{{ request.path }}">
                     </div>
                 </form>
             </div>
         </div>
-        <div class="row mt-2">
+        <div class="row mt-5">
             <div class="col-12">
                 <h4>Information</h4>
                 <p>SKU: {{ product.sku }}</p>
                 <p>{{ product.description }}</p>
-                <p>Features</p>
             </div>
         </div>
-        <div class="row">
+        <div class="row mt-5">
             <div class="col-12">
                 <h4>Reviews</h4>
                 <p>Check out our customer reviews!</p>
             </div>
             <div class="col-12">
                 {% for review in reviews %}
-                    <h5>{{ review.review_title }}</h5>
-                    <p class="float-end">{{ review.date_added }}</p>
-                    <p>{{ review.review_content }}</p>
-                    <p>{{ review.author }}</p>
-                    {% if review.author == request.user or request.user.is_superuser %}
-                    <small>
-                        <a href="{% url 'edit_product_review' review.id %}">Edit</a>
-                        <a href="#deleteReview" class="text-danger" data-bs-toggle="modal"
+                <h5>{{ review.review_title }}</h5>
+                <p class="float-end">{{ review.date_added }}</p>
+                <p>{{ review.review_content }}</p>
+                <p>{{ review.author }}</p>
+                {% if review.author == request.user or request.user.is_superuser %}
+                <small>
+                    <a href="{% url 'edit_product_review' review.id %}">Edit</a>
+                    <a href="#deleteReview" class="text-danger" data-bs-toggle="modal"
                         data-bs-target="#deleteReview">Delete</a>
-                    </small>
-                    <!-- Deletion confirmation Bootstrap modal -->
-                    <div class="modal fade" id="deleteReview" tabindex="-1" aria-labelledby="Delete review confirmation modal"
-                        aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                        aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body">
-                                    <p class="text-center">Are you sure you want to delete your review?</p>
-                                  </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-sm btn-grey" data-bs-dismiss="modal">Cancel</button>
-                                    <a href="{% url 'delete_product_review' review.id %}" class="text-danger">
-                                        <button type="button" class="btn btn-sm btn-danger">Delete</button>
-                                    </a>
-                                </div>
+                </small>
+                <!-- Deletion confirmation Bootstrap modal -->
+                <div class="modal fade" id="deleteReview" tabindex="-1"
+                    aria-labelledby="Delete review confirmation modal" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <p class="text-center">Are you sure you want to delete your review?</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-sm btn-grey"
+                                    data-bs-dismiss="modal">Cancel</button>
+                                <a href="{% url 'delete_product_review' review.id %}" class="text-danger">
+                                    <button type="button" class="btn btn-sm btn-danger">Delete</button>
+                                </a>
                             </div>
                         </div>
                     </div>
-                    {% endif %}
+                </div>
+                {% endif %}
                 {% endfor %}
             </div>
             <div class="col-12">
                 {% if request.user.is_authenticated %}
-                    <a href="{% url 'create_review' product.id %}">Leave a review</a>
+                <a href="{% url 'create_review' product.id %}">Leave a review</a>
                 {% endif %}
             </div>
-           
+
         </div>
 
     </div>
@@ -243,4 +250,28 @@
 {% block postloadjs %}
 {{ block.super }}
 {% include 'products/includes/quantity_input_script.html' %}
+<script type="text/javascript">
+    // Update quantity on click
+    $('.update-link').click(function (e) {
+        var form = $(this).prev('.update-form');
+        form.submit();
+    })
+
+    // Remove item and reload on click
+    $('.remove-item').click(function (e) {
+        var csrfToken = "{{ csrf_token }}";
+        var itemId = $(this).attr('id').split('remove_')[1];
+        var size = $(this).data('product_size');
+        var url = `/basket/remove/${itemId}/`;
+        var data = {
+            'csrfmiddlewaretoken': csrfToken,
+            'product_size': size
+        };
+
+        $.post(url, data)
+            .done(function () {
+                location.reload();
+            });
+    })
+</script>
 {% endblock %}
